crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__e2e_local_workspace_resolved_plan.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
expression: "&resolved"
---
ResolvedPlan(
    [
        Command(
            [
                Quoted(
                    "cleat",
                ),
                Literal(
                    "attach",
                ),
                Quoted(
                    "main__shell__0",
                ),
                Literal(
                    "--cwd",
                ),
                Quoted(
                    "/home/alice/dev/my-repo",
                ),
            ],
        ),
    ],
)
