crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__e2e_workspace_flattened_commands.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
expression: "&flattened"
---
[
    "Command: ssh -t 'alice@feta.local' '$SHELL -l -c '\\''cd '\\''\\'\\'''\\''/home/alice/dev/my-repo/wt-feat'\\''\\'\\'''\\'' && '\\''\\'\\'''\\''cleat'\\''\\'\\'''\\'' attach '\\''\\'\\'''\\''feat__shell__0'\\''\\'\\'''\\'' --cwd '\\''\\'\\'''\\''/home/alice/dev/my-repo/wt-feat'\\''\\'\\'''\\'' --cmd '\\''\\'\\'''\\''env FLOTILLA_ATTACHABLE_ID='\\''\\'\\'''\\''\\'\\''\\'\\'''\\'''\\''\\'\\'''\\''feat__shell__0'\\''\\'\\'''\\''\\'\\''\\'\\'''\\'''\\''\\'\\'''\\'' FLOTILLA_DAEMON_SOCKET='\\''\\'\\'''\\''\\'\\''\\'\\'''\\'''\\''\\'\\'''\\''/tmp/flotilla.sock'\\''\\'\\'''\\''\\'\\''\\'\\'''\\'''\\''\\'\\'''\\'' $SHELL -lc '\\''\\'\\'''\\''\\'\\''\\'\\'''\\'''\\''\\'\\'''\\''bash'\\''\\'\\'''\\''\\'\\''\\'\\'''\\'''\\''\\'\\'''\\'''\\''\\'\\'''\\'''\\'''",
]
