crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__remote_terminal_attach_always_wrap_flat.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
expression: flat
---
ssh 'feta' 'mock-attach '\''remote-shell-0'\'''
