crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__snapshot_arg_display_multi_level.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
expression: display_output
---
NestedCommand(
  $SHELL
  -l
  -c
  NestedCommand(
  cd
  "/home/alice/dev/my-repo"
  &&
  cleat
  attach
  sess-1
)
)
