crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__snapshot_collapse_remote_to_local.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
expression: resolved
---
ResolvedPlan(
    [
        Command(
            [
                Literal(
                    "ls",
                ),
                Literal(
                    "-la",
                ),
            ],
        ),
    ],
)
