crates/flotilla-core/src/hop_chain/snapshots/flotilla_core__hop_chain__tests__snapshot_local_terminal_attach.snap
---
source: crates/flotilla-core/src/hop_chain/tests.rs
expression: resolved
---
ResolvedPlan(
    [
        Command(
            [
                Literal(
                    "mock-attach",
                ),
                Quoted(
                    "local-shell-0",
                ),
            ],
        ),
    ],
)
